# four-dof-affine-tracking

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  ROScommunication.h  affine.h  analysis.cpp  automatic_recording.sh  config.ini  createVideosForMovingShape.sh  eros.h  main.cpp  movingShapes.cpp  movingShapes.py  results.py  results_closed-loop.py  results_open-loop.py
bag_files/event_same_gain/: ee_pose_1440ms.csv  latency_00_ms_trans_x_1440hz.txt
code/: CMakeLists.txt  SharedData.h  SharedData.msg  affine.h  analysis.cpp  eros.h  main.cpp  movingShapes.cpp
combined_results/exp1/: star_rot_250hz.txt  star_scale_30hz.txt  star_trans_x_0240hz.txt  star_trans_x_0480hz.txt  star_trans_x_0960hz.txt  star_trans_x_1440hz.txt  star_trans_y_135hz.txt  star_trans_y_405hz.txt  star_trans_y_540hz.txt
combined_results/exp2/: latency_00_ms_star_trans_x_240hz.txt  latency_00_ms_star_trans_x_960hz.txt  latency_05_ms_star_trans_x_240hz.txt  latency_05_ms_star_trans_x_960hz.txt  latency_10_ms_star_trans_x_480hz.txt  latency_10_ms_star_trans_x_960hz.txt  latency_25_ms_star_trans_x_240hz.txt  latency_30_ms_star_trans_x_960hz.txt  latency_40_ms_star_trans_x_240hz.txt  latency_40_ms_star_trans_x_480hz.txt  latency_45_ms_star_trans_x_240hz.txt  latency_50_ms_star_trans_x_240hz.txt
extrinsic_calib/: CMakeLists.txt  calib.cpp  calib.h
franka_control/: README.md  cartesian_velocity_example_controller.cpp  cartesian_velocity_example_controller.h  cartesian_velocity_example_controller_6dof.cpp
gt_comb/: gt_combined_motions.txt
open-loop_results/arrow/: arrow_4dof_100hz.txt  arrow_4dof_200hz.txt  arrow_4dof_400hz.txt  arrow_rot_100hz.txt  arrow_rot_150hz.txt  arrow_rot_175hz.txt  arrow_rot_200hz.txt  arrow_rot_225hz.txt  arrow_rot_250hz.txt  arrow_sc_600hz.txt  arrow_scale_100hz.txt  arrow_scale_200hz.txt  arrow_scale_300hz.txt  arrow_scale_400hz.txt  arrow_scale_600hz.txt  arrow_scale_800hz.txt  arrow_trans_x_0240hz.txt  arrow_trans_x_0480hz.txt  arrow_trans_x_0720hz.txt  arrow_trans_x_0960hz.txt  arrow_trans_x_1200hz.txt  arrow_trans_x_1440hz.txt  arrow_trans_y_135hz.txt  arrow_trans_y_270hz.txt  arrow_trans_y_405hz.txt  arrow_trans_y_540hz.txt  arrow_trans_y_675hz.txt  arrow_trans_y_810hz.txt
open-loop_results/circle/: circle_scale_100hz.txt  circle_scale_200hz.txt  circle_scale_300hz.txt  circle_scale_400hz.txt  circle_scale_600hz.txt  circle_scale_800hz.txt  circle_trans_x_0240hz.txt  circle_trans_x_0480hz.txt  circle_trans_x_0720hz.txt  circle_trans_x_0960hz.txt  circle_trans_x_1200hz.txt  circle_trans_x_1440hz.txt  circle_trans_y_135hz.txt  circle_trans_y_270hz.txt  circle_trans_y_405hz.txt  circle_trans_y_540hz.txt  circle_trans_y_675hz.txt  circle_trans_y_810hz.txt
open-loop_results/flag/: flag_4dof_200hz.txt  flag_rot_100hz.txt  flag_rot_150hz.txt  flag_rot_175hz.txt  flag_rot_200hz.txt  flag_rot_225hz.txt  flag_rot_250hz.txt  flag_scale_100hz.txt  flag_scale_200hz.txt  flag_scale_300hz.txt  flag_scale_400hz.txt  flag_scale_600hz.txt  flag_scale_800hz.txt  flag_trans_x_0240hz.txt  flag_trans_x_0480hz.txt  flag_trans_x_0720hz.txt  flag_trans_x_0960hz.txt  flag_trans_x_1200hz.txt  flag_trans_x_1440hz.txt  flag_trans_y_135hz.txt  flag_trans_y_270hz.txt  flag_trans_y_405hz.txt  flag_trans_y_540hz.txt  flag_trans_y_810hz.txt
open-loop_results/hexagon/: hexagon_4dof_100hz.txt  hexagon_4dof_200hz.txt  hexagon_4dof_300hz.txt  hexagon_4dof_400hz.txt  hexagon_4dof_600hz.txt  hexagon_4dof_800hz.txt  hexagon_rot_100hz.txt  hexagon_rot_200hz.txt  hexagon_sc_100hz.txt  hexagon_sc_200hz.txt  hexagon_sc_300hz.txt  hexagon_sc_400hz.txt  hexagon_sc_600hz.txt  hexagon_sc_800hz.txt  hexagon_trans_x_0240hz.txt  hexagon_trans_x_0480hz.txt  hexagon_trans_x_0720hz.txt  hexagon_trans_x_0960hz.txt  hexagon_trans_x_1200hz.txt  hexagon_trans_x_1440hz.txt  hexagon_trans_y_135hz.txt  hexagon_trans_y_270hz.txt  hexagon_trans_y_405hz.txt  hexagon_trans_y_540hz.txt  hexagon_trans_y_675hz.txt  hexagon_trans_y_810hz.txt
open-loop_results/oval/: oval_rot_100hz.txt  oval_rot_150hz.txt  oval_sc_300hz.txt  oval_trans_x_0240hz.txt  oval_trans_x_0960hz.txt  oval_trans_x_1200hz.txt  oval_trans_y_135hz.txt
open-loop_results/pacman/: pacman_4dof_100hz.txt  pacman_4dof_200hz.txt  pacman_4dof_800hz.txt  (+7 more)
scripts/: closed-loop_time_analysis.py  combined_open-loop.py  comp_times.py  event_added-latency_plots.py  event_added-latency_robot_side.py  event_added-latency_tracker_side.py  gt_printing.py  heat_map_error_failures.py  movingShapes.py  plot4dof_robot.py  realobject.py  results.py  results_closed-loop.py  results_open-loop.py  rgb_vs_event_closed_loop.py  rgb_vs_event_open_loop.py  rosbag_read.py
shape_detector_pilot/: CMakeLists.txt  shape_detector.cpp
trackerAPI_realsense/: CMakeLists.txt  RGBtracker_realsense.cpp  RGBtracker_realsense_eros.cpp  ROScommunication.h  affine.h  realsense_open-loop.py
trajectory_interpolation/: CMakeLists.txt  interpolate_trajectory.cpp
(+508 files in other folders)
